--- a/hypr/animations/animations.conf
+++ b/hypr/animations/animations.conf
@@ -1,30 +1,43 @@
 animations {
-    enabled = false
+    enabled = yes, please :)
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    bezier = liner, 1, 1, 1, 1 
-    bezier = poe, 0.25, 0.1, 0.25, 1
+    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
     bezier = linear, 0.0, 0.0, 1.0, 1.0
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     bezier = overshot, 0.05, 0.9, 0.1, 1.1
     bezier = cubic, 0.54, 0.22, 0.07, 0.74
     bezier = overshotCircle, 0.175, 0.885, 0.32, 1.275
     bezier = md3_standard, 0.2, 0.0, 0, 1.0
-    bezier= bounce, 1, 1.6, 0.1, 0.85
+    bezier = bounce, 1, 1.6, 0.1, 0.85
     bezier = decel, 0.05, 0.7, 0.1, 1
     bezier = myb, 0.1, 1, 0.0, 1.05
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.34, 1.96, 0.64, 1
     bezier = winOut, 0.68, -0.55, 0.265, 1.55
+    bezier = zen,0.175,0.885,0.32,1.35
+    bezier = cubicbz,0.77,0.00,0.175,1.00
 
-    animation = windows, 1, 4, bounce
-    animation = windowsIn, 1, 6, overshotCircle, slide
-    animation = windowsOut, 1, 8, winOut, popin 10%
-    animation = border, 1, 9, liner
-    animation = borderangle, 1, 9, default
-    animation = fade, 1, 6, default
-    #animation = layersIn, 1, 8, default, slide
-    animation = workspaces, 1, 2, wind
+    animation = global, 1, 10, default
+    animation = border, 1, 5.39, easeOutQuint
+    animation = windows, 1, 4.79, cubicbz, gnomed
+    animation = windowsIn, 1, 4.1, cubicbz, gnomed 
+    animation = windowsOut, 1, 1.49, cubicbz, gnomed
+    animation = fadeIn, 1, 1.73, almostLinear
+    animation = fadeOut, 1, 1.46, almostLinear
+    animation = fade, 1, 3.03, quick
+    animation = layers, 1, 3.81, easeOutQuint
+    animation = layersIn, 1, 4, easeOutQuint, fade
+    animation = layersOut, 1, 1.5, linear, fade
+    animation = fadeLayersIn, 1, 1.79, almostLinear
+    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = workspaces, 1, 1.94, almostLinear, slide
+    animation = workspacesIn, 1, 1.21, almostLinear, slide
+    animation = workspacesOut, 1, 1.94, almostLinear, slide
 }
+
