--- a/hypr/keybinds/keybinds.conf
+++ b/hypr/keybinds/keybinds.conf
@@ -1,3 +1,12 @@
+$terminal = kitty
+$fileManager = thunar
+$menu = rofi -show drun
+
+
+###################
+### KEYBINDINGS ###
+###################
+
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
@@ -6,26 +15,25 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, T, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, F, fullscreen,
+bind = $mainMod, F, fullscreen
+bind = $mainMod, O, exec, obsidian
+bind = $mainMod, B, exec, bash -c "./~/Downloads/appimage/zen-x86_64.AppImage"
 bind = $mainMod, PRINT, exec, hyprshot -m region
-bind = super, $key, exec, hyprswitch gui --mod-key super_l --key $key --max-switch-offset 9
-#bind = $mainMod, D, exec, bash -c "/home/camomila/.config/fabric/src.sh"
-bind = $mainMod, L, exec, hyprlock
+bind = $SUPER_SHIFT, P, exec, bash -c "poweroff"
+bind = $SUPER_SHIFT, L, exec, hyprlock
+bind = $mainMod, G, hy3:makegroup, tab, ephemeral
+#bind = $mainMod, F, hy3:makegroup, opposite
+bind = $mainMod, V, hy3:changegroup, opposite
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-
-bind = SUPER SHIFT, H, movewindow, l
-bind = SUPER SHIFT, L, movewindow, r
-bind = SUPER SHIFT, K, movewindow, u
-bind = SUPER SHIFT, J, movewindow, d 
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -64,18 +72,16 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-
-#hy3
 
